--- a/python-intro.ipynb
+++ b/python-intro.ipynb
@@ -1,7 +1,604 @@
-
 {
-         "cells": [],
-         "metadata": {},
-         "nbformat": 4,
-         "nbformat_minor": 2
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Intro to Python\n",
+        "\n",
+        "**bold text is pretty**\n",
+        "\n",
+        "This is my first jupyter+colab notebook.\n"
+      ],
+      "metadata": {
+        "id": "45iHTnh23qoD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "age = 23\n",
+        "name = \"Chidinma\""
+      ],
+      "metadata": {
+        "id": "8HxEp4hu4n1_"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(name, 'is', age, 'years old', '.')"
+      ],
+      "metadata": {
+        "id": "tE9rsrUu5caa",
+        "outputId": "85a734a9-9b41-4d7a-e5a8-75062d11fba9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Chidinma is 23 years old .\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "last_name = \"Ogbonnaya\"\n",
+        "print(last_name)"
+      ],
+      "metadata": {
+        "id": "zsjwMM-x7CwW",
+        "outputId": "d4dbeaeb-8a44-48c3-9a11-63418a0294c9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ogbonnaya\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(name,\"will be\", age+10, \"in ten years.\")"
+      ],
+      "metadata": {
+        "id": "rbDRc4Xi68MJ",
+        "outputId": "054a447e-8d50-4873-9c66-e5ff9c0a9910",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Chidinma will be 33 in ten years.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(name[2])"
+      ],
+      "metadata": {
+        "id": "AXdGcoFK8RDi",
+        "outputId": "930eedad-a4c3-4b36-9205-d9985597f2b1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "i\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(name[0])"
+      ],
+      "metadata": {
+        "id": "1iY0krdy8oux",
+        "outputId": "bad7e059-9506-4eac-eebf-0a0807093228",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "C\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name_substring = name[0:2]\n",
+        "print(name_substring)"
+      ],
+      "metadata": {
+        "id": "f0hjewtL83TV",
+        "outputId": "040b9479-a087-4419-baea-12cc1222792b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ch\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name = \"Chidi\"\n",
+        "print(name)"
+      ],
+      "metadata": {
+        "id": "n8GyppnJ90TP",
+        "outputId": "ee3a77b2-af88-4818-fb97-3be3c13fe8b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Chidi\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "length_name = len(name)\n",
+        "print(length_name + 4)"
+      ],
+      "metadata": {
+        "id": "tWQ7wXBb-CsW",
+        "outputId": "e87f0d96-eb16-4ba4-da36-fb0ddde146f3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ddvbkdb = 0"
+      ],
+      "metadata": {
+        "id": "IgVv_B0g-W7q"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ddPbkdb = 5\n",
+        "print(ddvbkdb)"
+      ],
+      "metadata": {
+        "id": "R3h3oSBC-z1M",
+        "outputId": "d1418d52-3b1d-4892-f7b0-d20812f7a5cb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(name)"
+      ],
+      "metadata": {
+        "id": "9Tx_jj1qAMXu",
+        "outputId": "19b435a5-dd45-4c29-846b-c4b0821798b2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(age)"
+      ],
+      "metadata": {
+        "id": "Fj86wcRPAQcP",
+        "outputId": "24620134-c0a8-4803-c30b-02976e9873ff",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_age = '20'\n",
+        "print(new_age + 15)"
+      ],
+      "metadata": {
+        "id": "_K96_P70AwjA",
+        "outputId": "e14605d7-c14a-4013-8266-6bf08f0ce015",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 158
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "can only concatenate str (not \"int\") to str",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-21-8b2518d3daf1>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mnew_age\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'20'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_age\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m15\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_age = int(new_age)"
+      ],
+      "metadata": {
+        "id": "-QrW8t73BWim"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_age + 50"
+      ],
+      "metadata": {
+        "id": "q65BmKPaBl40",
+        "outputId": "62b19a4d-3e3a-4f15-e171-646c652a8227",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "70"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = 5.0923"
+      ],
+      "metadata": {
+        "id": "XOjIXclhCPRy"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(num)"
+      ],
+      "metadata": {
+        "id": "v73ufeJCCaIm",
+        "outputId": "764065ce-9156-4253-fbe1-7aaf6cc68683",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num- 0.856473"
+      ],
+      "metadata": {
+        "id": "XfYuSuhPCi9e",
+        "outputId": "78800ea3-01f9-4506-b664-a5b52b5b7e40",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4.235827"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num * 6"
+      ],
+      "metadata": {
+        "id": "AxEHQ4n3CoNv",
+        "outputId": "98a946c5-57e3-498b-8976-1c4c2522fe59",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "30.5538"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num / 0.5"
+      ],
+      "metadata": {
+        "id": "ABTCnNUECwxb",
+        "outputId": "c19b27de-a085-47bf-bc11-3ab02de8d0f5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10.1846"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "integer = 4\n",
+        "print(integer/3)"
+      ],
+      "metadata": {
+        "id": "m4eJMmcLC-H_",
+        "outputId": "10eba3bf-9b84-4a90-92cd-06d16e5e4d02",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.3333333333333333\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(integer/3)"
+      ],
+      "metadata": {
+        "id": "tcTTMQxwDIEq",
+        "outputId": "924789b4-db84-4c09-ed17-74e7528196bd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name + \".\""
+      ],
+      "metadata": {
+        "id": "4g2fnqcbD-xX",
+        "outputId": "3f208667-6119-4bf8-b2ef-1c170aa43446",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Chidi.'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# THis sentence isn't executed by Python\n",
+        "length_name = len(name)\n",
+        "print(length_name + 4) #this isn't either"
+      ],
+      "metadata": {
+        "id": "Q56adQBrERmC",
+        "outputId": "42f9011f-8edb-43eb-c2af-ffe9094f77cf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9\n"
+          ]
+        }
+      ]
+    }
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "language_info": {
+      "name": "python"
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
