--- a/python-intro.ipynb
+++ b/python-intro.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ceogbonn/python-novice-gapminder-data/blob/main/python-intro.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "# Intro to Python\n",
         "\n",
@@ -31,11 +41,11 @@
         "print(name, 'is', age, 'years old', '.')"
       ],
       "metadata": {
-        "id": "tE9rsrUu5caa",
-        "outputId": "85a734a9-9b41-4d7a-e5a8-75062d11fba9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tE9rsrUu5caa",
+        "outputId": "85a734a9-9b41-4d7a-e5a8-75062d11fba9"
       },
       "execution_count": 3,
       "outputs": [
@@ -55,11 +65,11 @@
         "print(last_name)"
       ],
       "metadata": {
-        "id": "zsjwMM-x7CwW",
-        "outputId": "d4dbeaeb-8a44-48c3-9a11-63418a0294c9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zsjwMM-x7CwW",
+        "outputId": "d4dbeaeb-8a44-48c3-9a11-63418a0294c9"
       },
       "execution_count": 5,
       "outputs": [
@@ -78,11 +88,11 @@
         "print(name,\"will be\", age+10, \"in ten years.\")"
       ],
       "metadata": {
-        "id": "rbDRc4Xi68MJ",
-        "outputId": "054a447e-8d50-4873-9c66-e5ff9c0a9910",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rbDRc4Xi68MJ",
+        "outputId": "054a447e-8d50-4873-9c66-e5ff9c0a9910"
       },
       "execution_count": 6,
       "outputs": [
@@ -101,11 +111,11 @@
         "print(name[2])"
       ],
       "metadata": {
-        "id": "AXdGcoFK8RDi",
-        "outputId": "930eedad-a4c3-4b36-9205-d9985597f2b1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AXdGcoFK8RDi",
+        "outputId": "930eedad-a4c3-4b36-9205-d9985597f2b1"
       },
       "execution_count": 7,
       "outputs": [
@@ -124,11 +134,11 @@
         "print(name[0])"
       ],
       "metadata": {
-        "id": "1iY0krdy8oux",
-        "outputId": "bad7e059-9506-4eac-eebf-0a0807093228",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1iY0krdy8oux",
+        "outputId": "bad7e059-9506-4eac-eebf-0a0807093228"
       },
       "execution_count": 8,
       "outputs": [
@@ -148,11 +158,11 @@
         "print(name_substring)"
       ],
       "metadata": {
-        "id": "f0hjewtL83TV",
-        "outputId": "040b9479-a087-4419-baea-12cc1222792b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "f0hjewtL83TV",
+        "outputId": "040b9479-a087-4419-baea-12cc1222792b"
       },
       "execution_count": 10,
       "outputs": [
@@ -172,11 +182,11 @@
         "print(name)"
       ],
       "metadata": {
-        "id": "n8GyppnJ90TP",
-        "outputId": "ee3a77b2-af88-4818-fb97-3be3c13fe8b9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "n8GyppnJ90TP",
+        "outputId": "ee3a77b2-af88-4818-fb97-3be3c13fe8b9"
       },
       "execution_count": 18,
       "outputs": [
@@ -196,11 +206,11 @@
         "print(length_name + 4)"
       ],
       "metadata": {
-        "id": "tWQ7wXBb-CsW",
-        "outputId": "e87f0d96-eb16-4ba4-da36-fb0ddde146f3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tWQ7wXBb-CsW",
+        "outputId": "e87f0d96-eb16-4ba4-da36-fb0ddde146f3"
       },
       "execution_count": 16,
       "outputs": [
@@ -231,11 +241,11 @@
         "print(ddvbkdb)"
       ],
       "metadata": {
-        "id": "R3h3oSBC-z1M",
-        "outputId": "d1418d52-3b1d-4892-f7b0-d20812f7a5cb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "R3h3oSBC-z1M",
+        "outputId": "d1418d52-3b1d-4892-f7b0-d20812f7a5cb"
       },
       "execution_count": 15,
       "outputs": [
@@ -254,11 +264,11 @@
         "type(name)"
       ],
       "metadata": {
-        "id": "9Tx_jj1qAMXu",
-        "outputId": "19b435a5-dd45-4c29-846b-c4b0821798b2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9Tx_jj1qAMXu",
+        "outputId": "19b435a5-dd45-4c29-846b-c4b0821798b2"
       },
       "execution_count": 19,
       "outputs": [
@@ -280,11 +290,11 @@
         "type(age)"
       ],
       "metadata": {
-        "id": "Fj86wcRPAQcP",
-        "outputId": "24620134-c0a8-4803-c30b-02976e9873ff",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Fj86wcRPAQcP",
+        "outputId": "24620134-c0a8-4803-c30b-02976e9873ff"
       },
       "execution_count": 20,
       "outputs": [
@@ -307,12 +317,12 @@
         "print(new_age + 15)"
       ],
       "metadata": {
-        "id": "_K96_P70AwjA",
-        "outputId": "e14605d7-c14a-4013-8266-6bf08f0ce015",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 158
-        }
+        },
+        "id": "_K96_P70AwjA",
+        "outputId": "e14605d7-c14a-4013-8266-6bf08f0ce015"
       },
       "execution_count": 21,
       "outputs": [
@@ -346,11 +356,11 @@
         "new_age + 50"
       ],
       "metadata": {
-        "id": "q65BmKPaBl40",
-        "outputId": "62b19a4d-3e3a-4f15-e171-646c652a8227",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "q65BmKPaBl40",
+        "outputId": "62b19a4d-3e3a-4f15-e171-646c652a8227"
       },
       "execution_count": 23,
       "outputs": [
@@ -383,11 +393,11 @@
         "type(num)"
       ],
       "metadata": {
-        "id": "v73ufeJCCaIm",
-        "outputId": "764065ce-9156-4253-fbe1-7aaf6cc68683",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "v73ufeJCCaIm",
+        "outputId": "764065ce-9156-4253-fbe1-7aaf6cc68683"
       },
       "execution_count": 25,
       "outputs": [
@@ -409,11 +419,11 @@
         "num- 0.856473"
       ],
       "metadata": {
-        "id": "XfYuSuhPCi9e",
-        "outputId": "78800ea3-01f9-4506-b664-a5b52b5b7e40",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XfYuSuhPCi9e",
+        "outputId": "78800ea3-01f9-4506-b664-a5b52b5b7e40"
       },
       "execution_count": 26,
       "outputs": [
@@ -435,11 +445,11 @@
         "num * 6"
       ],
       "metadata": {
-        "id": "AxEHQ4n3CoNv",
-        "outputId": "98a946c5-57e3-498b-8976-1c4c2522fe59",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AxEHQ4n3CoNv",
+        "outputId": "98a946c5-57e3-498b-8976-1c4c2522fe59"
       },
       "execution_count": 27,
       "outputs": [
@@ -461,11 +471,11 @@
         "num / 0.5"
       ],
       "metadata": {
-        "id": "ABTCnNUECwxb",
-        "outputId": "c19b27de-a085-47bf-bc11-3ab02de8d0f5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ABTCnNUECwxb",
+        "outputId": "c19b27de-a085-47bf-bc11-3ab02de8d0f5"
       },
       "execution_count": 28,
       "outputs": [
@@ -488,11 +498,11 @@
         "print(integer/3)"
       ],
       "metadata": {
-        "id": "m4eJMmcLC-H_",
-        "outputId": "10eba3bf-9b84-4a90-92cd-06d16e5e4d02",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "m4eJMmcLC-H_",
+        "outputId": "10eba3bf-9b84-4a90-92cd-06d16e5e4d02"
       },
       "execution_count": 29,
       "outputs": [
@@ -511,11 +521,11 @@
         "type(integer/3)"
       ],
       "metadata": {
-        "id": "tcTTMQxwDIEq",
-        "outputId": "924789b4-db84-4c09-ed17-74e7528196bd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tcTTMQxwDIEq",
+        "outputId": "924789b4-db84-4c09-ed17-74e7528196bd"
       },
       "execution_count": 30,
       "outputs": [
@@ -537,12 +547,12 @@
         "name + \".\""
       ],
       "metadata": {
-        "id": "4g2fnqcbD-xX",
-        "outputId": "3f208667-6119-4bf8-b2ef-1c170aa43446",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "4g2fnqcbD-xX",
+        "outputId": "3f208667-6119-4bf8-b2ef-1c170aa43446"
       },
       "execution_count": 31,
       "outputs": [
@@ -569,11 +579,11 @@
         "print(length_name + 4) #this isn't either"
       ],
       "metadata": {
-        "id": "Q56adQBrERmC",
-        "outputId": "42f9011f-8edb-43eb-c2af-ffe9094f77cf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Q56adQBrERmC",
+        "outputId": "42f9011f-8edb-43eb-c2af-ffe9094f77cf"
       },
       "execution_count": 32,
       "outputs": [
@@ -589,7 +599,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "language_info": {
       "name": "python"
